TRAEFIK-INGRESS-CONTROLER/v1.7/traefik-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - name: web
    port: 80
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
  - host: traefikdash.traefik.pennux.core.local
    http:
      paths:
      - path: /
        backend:
          serviceName: traefikdash.traefik.pennux.core.local
          servicePort: web
